# rspc

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.cargo/: config.toml
.github/workflows/: ci.yml
examples/astro/: package.json  tsconfig.json
examples/astro/src/components/: react-alpha.tsx  react-batch-alpha.tsx  react.tsx  solid.tsx
examples/astro/test/: client.test.ts  react.test.tsx  solid.test.tsx
examples/src/: selection.rs
httpz/: Cargo.toml  README.md
httpz/src/: lib.rs  server.rs
httpz/src/servers/: axum.rs  mod.rs
httpz/src/ws/: fallback_ws.rs  tokio_ws.rs
src/: error.rs  lib.rs  router.rs  router_builder.rs  selection.rs
src/alpha/: layer.rs  mod.rs  procedure.rs  router.rs
src/alpha/middleware/: mw_result.rs
src/alpha/unstable/: mw_arg_mapper.rs
src/alpha_stable/: mod.rs  resolver_function.rs
src/integrations/: httpz.rs  mod.rs  tauri.rs
src/internal/: jsonrpc_exec.rs  mod.rs
