[package]
name = "httpz"
version = "0.0.6"
description = "Code once, support every Rust webserver!"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"

homepage = "https://github.com/oscartbeaumont/httpz"
documentation = "https://docs.rs/httpz"
repository = "https://github.com/oscartbeaumont/httpz"
readme = "README.md"

keywords = ["httpz", "async", "web", "http", "websockets"]
categories = ["network-programming", "web-programming", "web-programming::http-server", "asynchronous", "development-tools"]

[features]
default = []
ws = []

# Async runtimes
async-tungstenite = [] # TODO: Remove this?
tokio-ws = [
    "dep:async-tungstenite",
    "async-tungstenite/tokio-runtime",
    "dep:sha1",
    "dep:base64",
    "dep:tokio",
    "ws",
] # TODO: This feature shouldn't force tokio as the async runtime
# TODO: Support other async runtimes

# Webservers
axum = ["dep:axum"]

[dependencies]
# Webservers
axum = { version = "0.6.20", optional = true, features = [] }

# Core
http = { version = "0.2.12", features = [] }
form_urlencoded = "1.2.0"
async-tungstenite = { version = "0.28.0", optional = true }
sha1 = { version = "0.10.5", optional = true }
base64 = { version = "0.22.1", optional = true }
tokio = { version = "1.29.1", features = [], default-features = false, optional = true }
hyper = "0.14.27"                                                                        # TODO: Remove this if possible or feature gate it. I think Axum needs it.
futures = "0.3.28"
thiserror = "1.0"
percent-encoding = { version = "2.3.0", optional = true, features = [] }
tracing = { version = "0.1.37" }

[dev-dependencies]
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "fs"] }
axum = { version = "0.6.20", features = [] }
