[package]
name    = "httpz"
version = "0.0.6"

authors     = ["Oscar Beaumont <oscar@otbeaumont.me>"]
description = "Code once, support every Rust webserver!"
edition     = "2021"
license     = "MIT"

documentation = "https://docs.rs/httpz"
homepage      = "https://github.com/oscartbeaumont/httpz"
readme        = "README.md"
repository    = "https://github.com/oscartbeaumont/httpz"

categories = [
	"asynchronous",
	"development-tools",
	"network-programming",
	"web-programming",
	"web-programming::http-server"
]
keywords = ["async", "http", "httpz", "web", "websockets"]

[features]
default = []
ws      = []

# Async runtimes
async-tungstenite = [] # TODO: Remove this?
tokio-ws = [
	"async-tungstenite/tokio-runtime",
	"dep:async-tungstenite",
	"dep:base64",
	"dep:sha1",
	"dep:tokio",
	"ws"
] # TODO: This feature shouldn't force tokio as the async runtime
# TODO: Support other async runtimes

# Webservers
axum = ["dep:axum"]

[dependencies]
# Webservers
axum = { version = "0.6.20", optional = true, features = [] }

# Core
async-tungstenite = { version = "0.28.0", optional = true }
base64            = { version = "0.22.1", optional = true }
form_urlencoded   = "1.2.0"
futures           = "0.3.28"
http              = { version = "0.2.12", features = [] }
hyper             = "0.14.27"                                                                        # TODO: Remove this if possible or feature gate it. I think Axum needs it.
percent-encoding  = { version = "2.3.0", optional = true, features = [] }
sha1              = { version = "0.10.5", optional = true }
thiserror         = "1.0"
tokio             = { version = "1.29.1", features = [], default-features = false, optional = true }
tracing           = { version = "0.1.37" }

[dev-dependencies]
axum  = { version = "0.6.20", features = [] }
tokio = { version = "1.29.1", features = ["fs", "macros", "rt-multi-thread"] }
